fixed SpriteBatch after Pipelines change